--- a/_posts/2019-03-27-SQL(1).md
+++ b/_posts/2019-03-27-SQL(1).md
@@ -1,10 +1,10 @@
 ---
 layout: post
 title: "SQL (1)"
-description: "Select"
+description: "Select, Order By, Where, Group By, Having, Functions"
 date: 2019-03-27
 tags: [SQL, SQL SELECT, SQL ORDER BY, SQL WHERE, SQL LIKE, SQL GROUP BY, SQL HAVING, SQL FUNCTIONS]
-category: Select, Order by, Where, Like, Functions
+category: SQL
 comments: true
 share: true
 ---
@@ -158,10 +158,10 @@ WHERE comm >= 0;
 <br>
 
 ### 2.3. Like 연산자
-- % : 0개 이상의 문자 대체
-- _ : 1개 문자 대체
-- 예시: beau% - beau, beaut, beauti, ..
-- 예시: beau__ - beauab, beauti, beaufl ..
+> - % : 0개 이상의 문자 대체
+> - _ : 1개 문자 대체
+> - 예시: beau% - beau, beaut, beauti, ..
+> - 예시: beau__ - beauab, beauti, beaufl ..
 
 ```sql
 -- 이름이 s로 끝나는 직원의 이름, 업무, 급여를 조회
@@ -181,8 +181,8 @@ WHERE ename like '%s';
 <br>
 
 ### 2.4. GROUP BY & HAVING 조건
-- Group by 절: 특정 컬럼 값을 기준으로 그룹화
-- Having 절: 그룹으로 묶은 뒤, 조건이 있는 경우
+> - Group by 절: 특정 컬럼 값을 기준으로 그룹화
+> - Having 절: 그룹으로 묶은 뒤, 조건이 있는 경우
 
 ```sql
 -- 부서별로 급여 평균, 최저 급여 조회 (급여 평균이 높은 순으로)
@@ -247,11 +247,11 @@ HAVING sum(sal) > 5000;
 
 ## 3. 함수
 ### 3.1. Single-Row Function (단일행 함수)
-- String Function:
-	- ASCII( ), CHAR()
-	- LENGTH()
-	- INSTR()
-	- LEFT(), RIGHT(), SUBSTR(), SUBSTRING()
+> String Function:
+>- ASCII( ), CHAR()
+>- LENGTH()
+>- INSTR()
+>- LEFT(), RIGHT(), SUBSTR(), SUBSTRING()
 
 
 ```sql
@@ -283,10 +283,10 @@ SELECT SUBSTRING('i lovee sql', -9, 5);
 ```
 <br>
 
-- Numeric Function
-	- CEIL(), FLOOR(), ROUND(), TRUNCATE()
-	- MOD()
-	- RAND()
+> Numeric Function
+>- CEIL(), FLOOR(), ROUND(), TRUNCATE()
+>- MOD()
+>- RAND()
   
 ```sql
 SELECT CEIL(1.23);
@@ -304,7 +304,7 @@ SELECT TRUNCATE(1.73, 0);
 ```
 <br>
 
-- Date Function
+> Date Function
 
 ```sql
 -- NOW(), SYSDATE(), CURDATE(), CURTIME()
@@ -325,9 +325,11 @@ SELECT DATE_ADD(NOW(), interval 5 YEAR), DATE_ADD(NOW(), interval 5 DAY);
 <br>
 
 ### 3.2. Aggregation Function
-- SUM(), AVG(), COUNT(), MAX(), MIN()
+> SUM(), AVG(), COUNT(), MAX(), MIN()
 
 ### 3.3. 기타
+> CONVERT(), CASE(), COALESCE()
+
 ```sql
 -- CONVERT()
 SELECT CONVERT('2019-5-1', DATE);
