--- a/_posts/2019-03-28-SQL(2).md
+++ b/_posts/2019-03-28-SQL(2).md
@@ -3,7 +3,7 @@ layout: post
 title: "SQL (2)"
 description: "DML, Sub Query"
 date: 2019-03-28
-tags: [SQL, DML, Sub Query]
+tags: [SQL, SQL DML, SQL SUB QUERY]
 category: SQL
 comments: true
 share: true
@@ -28,7 +28,6 @@ INSERT INTO tableTest(id, regdate) VALUES (2, now())
 INSERT INTO tableTest VALUES 0;
 INSERT INTO tableTest VALUES (3, 'sally', now())
 ```
-<br>
 
 #### UPDATE
 ```sql
@@ -36,7 +35,6 @@ UPDATE tableTest
 SET name = 'scott'
 WHERE id = 3;
 ```
-<br>
 
 #### DELETE
 ```sql
@@ -46,14 +44,14 @@ DROP TABLE tableTest;
 <br>
 
 ## 5. Sub Query
-- 다른 query문에 포함된 query문
-- 반드시 () 사용
-- 반드시 연산자의 오른쪽에 와야함
-- ORDER BY 사용 불가
-- 연산자
-	- 단일행 연산자
-	- 다중행 연산자: IN, ANY, ALL
-- 다중열 비교
+>- 다른 query문에 포함된 query문
+>- 반드시 () 사용
+>- 반드시 연산자의 오른쪽에 와야함
+>- ORDER BY 사용 불가
+>- 연산자
+>	- 단일행 연산자
+>	- 다중행 연산자: IN, ANY, ALL
+>- 다중열 비교
 
 ```sql
 -- scott의 급여보다 더 많이 받는 직원의 이름, 업무, 급여를 조회
@@ -158,13 +156,14 @@ UPDATE scott_emp
 SET sal= 1500 , comm=300
 WHERE ename='miller';
 ```
+<br>
 
 ### 상관 서브 쿼리
-- 밖에 있는 서브쿼리가 먼저 시작해서 밖에서 가져다 준 결과를 안으로 다시 처리
-- 상관서브쿼리는 서브쿼리만 실행시 실행되지 x <br>
-  전체를 같이 실행시 서브쿼리도 같이 실행 <br>
-  서브쿼리는 상관이 되어 있음 -> 퍼포먼스가 안좋음
-- 일반서브쿼리는 서브쿼리만 실행시 실행되지 x
+>- 밖에 있는 서브쿼리가 먼저 시작해서 밖에서 가져다 준 결과를 안으로 다시 처리
+>- 상관서브쿼리는 서브쿼리만 실행시 실행되지 x <br>
+>  전체를 같이 실행시 서브쿼리도 같이 실행 <br>
+>  서브쿼리는 상관이 되어 있음 -> 퍼포먼스가 안좋음
+>- 일반서브쿼리는 서브쿼리만 실행시 실행되지 x
 
 ```sql
 -- 적어도 한명의 직원으로부터 보고를 받을 수 있는 직원의 이름, 업무, 입사일자, 급여를 조회
@@ -176,28 +175,9 @@ WHERE empno=7902 OR empno=7698 OR empno=7839  OR empno=7566 OR empno=7782;
 SELECT ename, job, hiredate, sal FROM scott_emp as  e1
 WHERE exists (SELECT * FROM scott_emp as e2 WHERE e1.empno= e2.mgr);
 ```
-<br>
 
-### 연습문제
-```
-1. Blake와 같은 부서에 있는 모든 직원의 사번, 이름, 입사일자 조회
 
-2. SELECT empno, ename, deptno, sal, comm FROM emp
-WHERE (sal, comm) IN(SELECT sal, comm FROM emp WHERE deptno=30);
-이 쿼리에서 보너스가 null인 사람도 출력될 수 있도록 수정하시오.
 
-3. 평균 급여 이상을 받는 직원들의  사번, 이름을 조회. 단, 급여가 많은 순으로 정렬
-
-4. 이름에 T자가 들어가는 직원이 근무하는 부서에서 근무하는 직원의 사번,이름, 급여 조회
-
-5. 부서의 위치가 dallas인 모든 직원에 대해 사번, 이름, 급여, 업무조회
-
-6. King에게 보고하는 모든 직원의 이름과 부서, 업무, 급여를 조회
-
-7. 급여가 30번 부서의 최저급여보다 높은 직원의 사번, 이름, 급여 조회
-
-8. 10번부서에서 30번 부서의 직원과 같은 업무를 하는 직원의 이름과 업무를 조회
-```
 
 
 
