--- a/_posts/2019-03-29-SQL(3).md
+++ b/_posts/2019-03-29-SQL(3).md
@@ -10,23 +10,27 @@ share: true
 ---
 
 ## 6. JOIN
-- 여러 개의 테이블을 병합하여 하나의 결과를 도출하기 위한 방법
+> 조인이란?
+> - 다수의 table간에  공통된 데이터를 기준으로 검색하는 명령어
+> - 다수의 table 이란? <br>
+>		-	동일한 table을 논리적으로 다수의 table로 간주: self join <br>
+>		-	물리적으로 다른 table간의 조인
 
-- 종류
-	1. Cartesian Product Join (데카르트 곱)
-	2. Equi Join: 공통 필드의 레코드를 가져오는 방법 (중복)
-		- INNER JOIN (중복 제거)
-	3. OUTER JOIN: INNER JOIN 확장 (INNER JOIN + 공통되지 않은 레코드도 가져옴)
-		- LEFT OUTER JOIN
-		- RIGHT OUTER JOIN
-		- FULL OUTER JOIN
-	4. Non-Equi Join: 공통되지 않는 필드의 레코드를 가져오는 방법
-	5. SELF JOIN
+> **table에 별칭 사용** 
+>- 검색시 다중 table의 컬럼명이 다를 경우 table별칭 사용 불필요, 
+>- 서로 다른 table간의 컬럼명이 중복된 경우, 컬럼 구분을 위해 오라클 엔진에게 정확한 table 소속명을 알려줘야 함
+>- 주의사항 : table별칭 as 사용 불가
 
-- 세개 이상 JOIN 할 경우
+>종류
+>	1. Equi Join: 공통 필드의 레코드를 가져오는 방법 (중복) 
+>		- INNER JOIN (중복 제거)
+>	2. OUTER JOIN: INNER JOIN 확장 (INNER JOIN + 공통되지 않은 레코드도 가져옴)
+>		- LEFT OUTER JOIN, RIGHT OUTER JOIN, FULL OUTER JOIN
+>	3. Non-Equi Join: 공통되지 않는 필드의 레코드를 가져오는 방법
+>	4. SELF JOIN: 동일 테이블 내에서 상이한 칼럼 참조
 
-- SET 연산자: <br>
-	UNION, UNION ALL, INTERSECT, EXCEPT
+>SET 연산자: <br>
+>	- UNION, UNION ALL, INTERSECT, EXCEPT
 
 <br>
 
@@ -68,6 +72,8 @@ INSERT INTO tableC VALUES(9, 90);
 <br>
 
 ### INNER JOIN
+테이블에서 같은 조건이 존재할 경우의 값 검색
+
 ```sql
 SELECT tableA.id, tableA.value 
 FROM tableA INNER JOIN tableB 
@@ -83,7 +89,8 @@ ON a.id = b.id;
 SELECT a.id, a.value 
 FROM tableA a, tableB b 
 WHERE a.id = b.id; 
-
+```
+```sql
 -- 직원의 사번, 이름, 업무, 부서번호, 부서명을 조회
 SELECT empno, ename, job, scott_emp.deptno, dname 
 FROM scott_emp INNER JOIN scott_dept 
@@ -148,8 +155,11 @@ WHERE loc='NEW YORK';
 | MILLER | CLERK     | ACCOUNTING |
 +--------+-----------+------------+
 ```
+<br>
 
 ### OUTER JOIN
+두개 이상의 테이블이 조인될때 특정 데이터가 모든 테이블에 존재하지 않고 컬럼은 존재하나 null값을 보유한 경우 검색되지 않는 문제를 해결하기 위해 사용되는 조인
+
 ```sql
 SELECT a.id, a.value 
 FROM tableA a LEFT OUTER JOIN tableB b 
@@ -188,8 +198,10 @@ SELECT ename, sal, dname, loc
 FROM scott_emp RIGHT OUTER JOIN scott_dept 
 ON scott_emp.deptno = scott_dept.deptno;
 ```
-### Non-Equi Join
+<br>
 
+### Non-Equi JOIN
+100% 일치하지 않고 특정 범위내의 데이터 조인시에 사용
 ```sql
 ---직원들의 사번, 이름, 급여, 급여등급 조회
 SELECT empno, ename, sal, grade, losal, hisal 
@@ -216,8 +228,10 @@ ON e.sal >= s.losal AND e.sal <= s.hisal;
 |  7934 | MILLER | 1300 |     2 |  1201 |  1400 |
 +-------+--------+------+-------+-------+-------+
 ```
+<br>
 
 ### SELF JOIN
+동일 테이블 내에서 상이한 칼럼 참조
 ```sql
 -- 직원의 사번, 이름, 업무, 관리자, 관리자이름 조회
 -- 별명주기 필수
@@ -244,6 +258,7 @@ ON e.mgr = m.empno;
 |  7934 | MILLER | CLERK    | 7782 | CLARK |
 +-------+--------+----------+------+-------+
 ```
+<br>
 
 ## 세개 이상 JOIN
 ```sql
@@ -258,6 +273,7 @@ SELECT a.id, a.value, b.id, b.value, c.id, c.value
 FROM tableA a, tableB b, tableC c
 WHERE a.id = b.id AND b.id = c.id;
 ```
+<br>
 
 ## SET 연산자
 ```sql
@@ -307,26 +323,25 @@ SELECT deptno FROM scott_dept;
 <br>
 
 ## 7. 데이터 무결성 (Integrity)
-- **제약: Constraint**
+>**제약: Constraint** What? How?
+> 1. 실체 (Entity: 주로 table을 의미) 무결성
+>		- 데이터 중복 방지
+> 		- PRIMARY KEY, UNIQUE
+> 2. 영역 (Domain) 무결성
+>		- CHECK (mysql은 x)
+> 3. 참조 (Reference) 무결성
+> 		- FOREIGN KEY
+> 		- 부모: 참조 당하는 table, 자식: 참조하는 table
 
-- What? How?
-    - 실체 (Entity: 주로 table을 의미) 무결성
-        - 데이터 중복 방지
-        - PRIMARY KEY, UNIQUE
-    - 영역 (Domain) 무결성
-        - CHECK (mysql은 x)
-    - 참조 (Reference) 무결성
-        - FOREIGN KEY
-        - 부모 table: 참조 당하는.. 자식 table: 참조하는..
 
-- 컬럼의 속성
-	- NN (Not Null)
-		- PRIMARY KEY
-	- ND (Not Duplicate)
-		- PRIMARY KEY
-		- UNIQUE
-	- NC (Not Change)
-		- FOREIGN KEY
+>컬럼의 속성
+>1. NN (Not Null)
+>		- PRIMARY KEY
+>2. ND (Not Duplicate)
+>		- PRIMARY KEY
+>		- UNIQUE
+>3. NC (Not Change)
+>		- FOREIGN KEY
 
 <br>
 
@@ -382,6 +397,8 @@ CREATE TABLE tableEXAM(
 ALTER TABLE tableEXAM MODIFY name varchar(10) null;
 ALTER TABLE tableEXAM ADD age int null;
 ```
+<br>
+
 ### UNIQUE (ND)
 
 ```sql
@@ -429,6 +446,7 @@ INSERT INTO tableEXAM(name, age) VALUES ('scott', 20);
 INSERT INTO tableEXAM(age) VALUES (30);
 INSERT INTO tableEXAM(name) VALUES ('miller');
 ```
+<br>
 
 ### FOREIGN KEY (NC)
 ```sql
@@ -470,7 +488,7 @@ DROP TABLE tableDEPT;
 	--> ERROR 1217 (23000): Cannot delete or update a parent row: a foreign key constraint fails
 ```
 
-### 연습문제
+### example
 | column name  	| post1 	| post2 	| addr                        	|
 |---------------|---------  |-----------|-------------------------------|
 | key type     	| PK     	| PK       	|                             	|
