--- a/_posts/2019-03-29-SQL(3).md
+++ b/_posts/2019-03-29-SQL(3).md
@@ -21,13 +21,13 @@ share: true
 >- 서로 다른 table간의 컬럼명이 중복된 경우, 컬럼 구분을 위해 오라클 엔진에게 정확한 table 소속명을 알려줘야 함
 >- 주의사항 : table별칭 as 사용 불가
 
->종류
->	1. Equi Join: 공통 필드의 레코드를 가져오는 방법 (중복) 
+> 종류
+>1. Equi Join: 공통 필드의 레코드를 가져오는 방법 (중복) 
 >		- INNER JOIN (중복 제거)
->	2. OUTER JOIN: INNER JOIN 확장 (INNER JOIN + 공통되지 않은 레코드도 가져옴)
+>2. OUTER JOIN: INNER JOIN 확장 (INNER JOIN + 공통되지 않은 레코드도 가져옴)
 >		- LEFT OUTER JOIN, RIGHT OUTER JOIN, FULL OUTER JOIN
->	3. Non-Equi Join: 공통되지 않는 필드의 레코드를 가져오는 방법
->	4. SELF JOIN: 동일 테이블 내에서 상이한 칼럼 참조
+>3. Non-Equi Join: 공통되지 않는 필드의 레코드를 가져오는 방법
+>4. SELF JOIN
 
 >SET 연산자: <br>
 >	- UNION, UNION ALL, INTERSECT, EXCEPT
@@ -489,8 +489,9 @@ DROP TABLE tableDEPT;
 ```
 
 ### example
+
 | column name  	| post1 	| post2 	| addr                        	|
-|---------------|---------  |-----------|-------------------------------|
+|------------   |---------  |--------   |----------------------------   |
 | key type     	| PK     	| PK       	|                             	|
 | nulls/unique 	|       	|       	| NN                          	|
 | max length   	| 3     	| 3     	| 60                          	|
