--- a/_posts/2019-04-01-SQL(4).md
+++ b/_posts/2019-04-01-SQL(4).md
@@ -23,12 +23,14 @@ CREATE VIEW viewname
 AS
     SELECT blah blah
 ```
+<br>
+
 ```sql
 CREATE VIEW vw30
 AS
     SELECT empno, ename, sal, comm 
     FROM scott_emp
-    WHERE deptno=30;
+    WHERE deptno = 30;
 
 SELECT * FROM vw30;
 ```
@@ -50,18 +52,18 @@ CREATE VIEW vw30
 AS
     SELECT ename, sal, job 
     FROM scott_emp
-    WHERE deptno=30;
+    WHERE deptno = 30;
 
 -- empno: Not null. Hence, empno는 항상 추가
 INSERT INTO vw30 VALUES('john', 2500, 'developer');
-    -> ERROR 1423 (HY000): Field of view 'dbexample.vw30' underlying table does not have a default value
+    --> ERROR 1423 (HY000): Field of view 'dbexample.vw30' underlying table does not have a default value
 
 DROP VIEW vw30;
 CREATE VIEW vw30
 AS
     SELECT empno, ename, sal, job 
     FROM scott_emp
-    WHERE deptno=30;
+    WHERE deptno = 30;
 
 -- deptno 지정을 안해줘서 vw30에 insert 되지 않고 scott_emp table에만 insert 됨
 INSERT INTO vw30 VALUES(1, 'john', 2500, 'developer');
@@ -81,6 +83,7 @@ DESC scott_emp;
 | DEPTNO   | int(11)     | YES  | MUL | NULL    |       |
 +----------+-------------+------+-----+---------+-------+
 ```
+<br>
 
 ## 9. INDEX
 ```sql
@@ -103,10 +106,10 @@ SELECT * from tableINDEX;
 
 CREATE INDEX idx_point ON tableINDEX(point);
 
-SELECT * FROM tableINDEX WHERE point>=4;
+SELECT * FROM tableINDEX WHERE point >= 4;
 
 -- alot faster after making index
-EXPLAIN SELECT * FROM tableINDEX WHERE point>=4;
+EXPLAIN SELECT * FROM tableINDEX WHERE point >= 4;
 ```
 
 ```
@@ -117,7 +120,7 @@ EXPLAIN SELECT * FROM tableINDEX WHERE point>=4;
 +----+-------------+------------+------------+-------+---------------+-----------+---------+------+------+----------+-----------------------+
 ```
 ```sql
-EXPLAIN SELECT * FROM tableINDEX WHERE id>=4;
+EXPLAIN SELECT * FROM tableINDEX WHERE id >= 4;
 ```
 ```
 +----+-------------+------------+------------+------+---------------+------+---------+------+------+----------+-------------+
@@ -132,6 +135,7 @@ DROP INDEX idx_point ON tableINDEX;
 ```sql
 ALTER TABLE tableINDEX ADD CONSTRAINT pk_id PRIMARY KEY(id);
 ```
+<br>
 
 ## 10. TRANSACTION
 - ALL OR NOTHING
@@ -183,7 +187,7 @@ DELETE FROM tableINDEX;
 COMMIT;
 ROLLBACK;
 SELECT * FROM tableINDEX;
-    -> Empty set
+    --> Empty set
 ```
 ```sql
 -- 동기화 작업
@@ -201,8 +205,8 @@ SELECT * from tableEXAM;
 ```
 ```sql
 UPDATE tableEXAM
-SET age=40
-WHERE id=1;
+SET age = 40
+WHERE id = 1;
 SELECT * FROM tableEXAM;
 ```
 ```
