--- a/_posts/2019-03-29-SQL(3).md
+++ b/_posts/2019-03-29-SQL(3).md
@@ -10,7 +10,7 @@ share: true
 ---
 
 ## 6. JOIN
-> 조인이란?
+> **조인이란?**
 > - 다수의 table간에  공통된 데이터를 기준으로 검색하는 명령어
 > - 다수의 table 이란? <br>
 >		-	동일한 table을 논리적으로 다수의 table로 간주: self join <br>
@@ -21,54 +21,17 @@ share: true
 >- 서로 다른 table간의 컬럼명이 중복된 경우, 컬럼 구분을 위해 오라클 엔진에게 정확한 table 소속명을 알려줘야 함
 >- 주의사항 : table별칭 as 사용 불가
 
-> 종류
->1. Equi Join: 공통 필드의 레코드를 가져오는 방법 (중복) 
->		- INNER JOIN (중복 제거)
->2. OUTER JOIN: INNER JOIN 확장 (INNER JOIN + 공통되지 않은 레코드도 가져옴)
->		- LEFT OUTER JOIN, RIGHT OUTER JOIN, FULL OUTER JOIN
->3. Non-Equi Join: 공통되지 않는 필드의 레코드를 가져오는 방법
+> **종류**
+>1. EQUI JOIN: 공통 필드의 레코드를 가져오는 방법 (중복) <br>
+>&nbsp; - INNER JOIN (중복 제거)
+>2. OUTER JOIN: INNER JOIN 확장 (INNER JOIN + 공통되지 않은 레코드도 가져옴) <br>
+>&nbsp;	- LEFT OUTER JOIN, RIGHT OUTER JOIN, FULL OUTER JOIN
+>3. NON-EQUI JOIN: 공통되지 않는 필드의 레코드를 가져오는 방법
 >4. SELF JOIN
 
->SET 연산자: <br>
->	- UNION, UNION ALL, INTERSECT, EXCEPT
+> **SET 연산자:** 
+> - UNION, UNION ALL, INTERSECT, EXCEPT
 
-<br>
-
-```sql
-USE dbexample;
-CREATE TABLE tableA( 
-	id	int	null,
-    value	int	null
-);
-
-CREATE TABLE tableB( 
-	id	int	null,
-    value	int	null
-);
-
-CREATE TABLE tableC( 
-	id	int	null,
-    value	int	null
-);
-
-INSERT INTO tableA VALUES(1, 10); 
-INSERT INTO tableA VALUES(2, 20); 
-INSERT INTO tableA VALUES(3, 30); 
-INSERT INTO tableA VALUES(5, 50); 
-INSERT INTO tableA VALUES(7, 70); 
-
-INSERT INTO tableB VALUES(1, 10); 
-INSERT INTO tableB VALUES(2, 20); 
-INSERT INTO tableB VALUES(4, 40); 
-INSERT INTO tableB VALUES(5, 50); 
-INSERT INTO tableB VALUES(8, 80); 
-
-INSERT INTO tableC VALUES(1, 10); 
-INSERT INTO tableC VALUES(2, 20); 
-INSERT INTO tableC VALUES(7, 70); 
-INSERT INTO tableC VALUES(8, 80); 
-INSERT INTO tableC VALUES(9, 90); 
-```
 <br>
 
 ### INNER JOIN
@@ -198,9 +161,30 @@ SELECT ename, sal, dname, loc
 FROM scott_emp RIGHT OUTER JOIN scott_dept 
 ON scott_emp.deptno = scott_dept.deptno;
 ```
+```
++--------+------+------------+----------+
+| ename  | sal  | dname      | loc      |
++--------+------+------------+----------+
+| CLARK  | 2450 | ACCOUNTING | NEW YORK |
+| KING   | 5000 | ACCOUNTING | NEW YORK |
+| MILLER | 1300 | ACCOUNTING | NEW YORK |
+| SMITH  |  800 | RESEARCH   | DALLAS   |
+| JONES  | 2975 | RESEARCH   | DALLAS   |
+| SCOTT  | 3000 | RESEARCH   | DALLAS   |
+| ADAMS  | 1100 | RESEARCH   | DALLAS   |
+| FORD   | 3000 | RESEARCH   | DALLAS   |
+| ALLEN  | 1600 | SALES      | CHICAGO  |
+| WARD   | 1250 | SALES      | CHICAGO  |
+| MARTIN | 1250 | SALES      | CHICAGO  |
+| BLAKE  | 2850 | SALES      | CHICAGO  |
+| TURNER | 1500 | SALES      | CHICAGO  |
+| JAMES  |  950 | SALES      | CHICAGO  |
+| NULL   | NULL | OPERATIONS | BOSTON   |
++--------+------+------------+----------+
+```
 <br>
 
-### Non-Equi JOIN
+### NON-EQUI JOIN
 100% 일치하지 않고 특정 범위내의 데이터 조인시에 사용
 ```sql
 ---직원들의 사번, 이름, 급여, 급여등급 조회
@@ -323,25 +307,25 @@ SELECT deptno FROM scott_dept;
 <br>
 
 ## 7. 데이터 무결성 (Integrity)
->**제약: Constraint** What? How?
-> 1. 실체 (Entity: 주로 table을 의미) 무결성
->		- 데이터 중복 방지
-> 		- PRIMARY KEY, UNIQUE
-> 2. 영역 (Domain) 무결성
->		- CHECK (mysql은 x)
-> 3. 참조 (Reference) 무결성
-> 		- FOREIGN KEY
-> 		- 부모: 참조 당하는 table, 자식: 참조하는 table
+>**제약: Constraint What? How?**
+> 1. 실체 (Entity: 주로 table을 의미) 무결성 <br>
+>&nbsp;		- 데이터 중복 방지 <br>
+>&nbsp; 		- PRIMARY KEY, UNIQUE
+> 2. 영역 (Domain) 무결성 <br>
+>&nbsp;		- CHECK (mysql은 x)
+> 3. 참조 (Reference) 무결성 <br>
+>&nbsp; 		- FOREIGN KEY <br>
+>&nbsp; 		- 부모: 참조 당하는 table, 자식: 참조하는 table
 
 
->컬럼의 속성
->1. NN (Not Null)
->		- PRIMARY KEY
->2. ND (Not Duplicate)
->		- PRIMARY KEY
->		- UNIQUE
->3. NC (Not Change)
->		- FOREIGN KEY
+> **컬럼의 속성**
+>1. NN (Not Null) <br>
+>&nbsp;		- PRIMARY KEY
+>2. ND (Not Duplicate) <br>
+>&nbsp;		- PRIMARY KEY <br>
+>&nbsp;		- UNIQUE
+>3. NC (Not Change) <br>
+>&nbsp;		- FOREIGN KEY
 
 <br>
 
@@ -416,17 +400,17 @@ INSERT INTO tableEXAM(id, name, age) VALUES(1, 'kimmy', 20);
 
 -- ND
 INSERT INTO tableEXAM(id, name, age) VALUES(1, 'lee', 20);
-	-> ERROR 1062 (23000): Duplicate entry '1' for key 'uk_id'
+	--> ERROR: Duplicate entry '1' for key 'uk_id'
 INSERT INTO tableEXAM(id, name, age) VALUES(2, 'kimmy', 20);
-	-> ERROR 1062 (23000): Duplicate entry 'kimmy' for key 'uk_name'
+	--> ERROR: Duplicate entry 'kimmy' for key 'uk_name'
 
 -- NN 속성은 방지 x
 INSERT INTO tableEXAM(id, name, age) VALUES(null, 'jimmy', 20);
-	-> Query OK, 1 row affected
+	--> Query OK, 1 row affected
     
 -- null값 중복은 ok
 INSERT INTO tableEXAM(id, name, age) VALUES(null, 'elsa', 20);
-	-> Query OK, 1 row affected
+	--> Query OK, 1 row affected
 ```
 
 ```sql
@@ -474,19 +458,20 @@ ADD CONSTRAINT fk_deptno FOREIGN KEY(deptno)
 REFERENCES tableDEPT(deptno);
 
 INSERT INTO tableEMP(empno, ename, hiredate, deptno) VALUES(1, 'scott', now(), 103);
-	--> ERROR 1452 (23000): Cannot add or update a child row: a foreign key constraint fails
+	--> ERROR: Cannot add or update a child row: a foreign key constraint fails
 
 INSERT INTO tableEMP(empno, ename, hiredate, deptno) VALUES(1, 'scott', now(), 102);
 	--> Query OK, 1 row affected
 
 -- NC
-UPDATE tableDEPT SET deptno=1002 WHERE deptno=102;
-	--> ERROR 1451 (23000): Cannot delete or update a parent row: a foreign key constraint fails
+UPDATE tableDEPT SET deptno = 1002 WHERE deptno = 102;
+	--> ERROR: Cannot delete or update a parent row: a foreign key constraint fails
 
 -- NC (삭제 x)
 DROP TABLE tableDEPT;
-	--> ERROR 1217 (23000): Cannot delete or update a parent row: a foreign key constraint fails
+	--> ERROR: Cannot delete or update a parent row: a foreign key constraint fails
 ```
+<br>
 
 ### example
 
