--- a/_posts/2019-04-01-SQL(4).md
+++ b/_posts/2019-04-01-SQL(4).md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "SQL (4)"
-description: "View, Index, Transcation"
+description: "View, Index, Transaction"
 date: 2019-04-01
 tags: [SQL, SQL VIEW, SQL INDEX, SQL TRANSACTION]
 category: SQL
@@ -16,13 +16,6 @@ share: true
 - 컬럼 단위의 보완 관리를 위해
 - NOTE: DML 작업 (INSERT, UPDATE, DELETE)
 
-<br>
-
-```sql
-CREATE VIEW viewname
-AS
-    SELECT blah blah
-```
 <br>
 
 ```sql
@@ -86,6 +79,12 @@ DESC scott_emp;
 <br>
 
 ## 9. INDEX
+- DB의 빠른 검색을 위한 색인 기능
+- Primary Key는 기본적으로 자동 index로 설정됨
+- 기본키: 절대 중복 불허, null 값도 허용 안 함
+
+<br>
+
 ```sql
 -- 제약을 통해 생성
 CREATE INDEX indexname ON tablename(fieldname)
@@ -131,8 +130,7 @@ EXPLAIN SELECT * FROM tableINDEX WHERE id >= 4;
 ```
 ```sql
 DROP INDEX idx_point ON tableINDEX;
-```
-```sql
+
 ALTER TABLE tableINDEX ADD CONSTRAINT pk_id PRIMARY KEY(id);
 ```
 <br>
