--- a/_posts/2019-03-28-SQL(2).md
+++ b/_posts/2019-03-28-SQL(2).md
@@ -11,11 +11,13 @@ share: true
 
 ## 4. DML: INSERT, UPDATE, DELETE
 ```sql
+-- DDL
 CREATE TABLE tableTest(
-    id	int	null  -- 비워놓아도 상관 x 
-    name	varchar(10)  -- 이름 길이는 정해지지 x
-    regdate	datetime
+    id	int	null,  -- 비워놓아도 상관 x 
+    name    varchar(10)  
 );
+
+ALTER TABLE tableTest add(regdate datetime)
 
 DROP table tableTest;
 ```
