--- a/_posts/2019-03-28-SQL(2).md
+++ b/_posts/2019-03-28-SQL(2).md
@@ -41,7 +41,6 @@ WHERE id = 3;
 #### DELETE
 ```sql
 DELETE FROM tableTest WHERE id = 3;
-DROP TABLE tableTest;
 ```
 <br>
 
@@ -59,21 +58,23 @@ DROP TABLE tableTest;
 -- scott의 급여보다 더 많이 받는 직원의 이름, 업무, 급여를 조회
 /*두번의 조회를 해야함*/
 SELECT sal FROM scott_emp WHERE ename='scott'; 
-SELECT ename, job, sal FROM scott_emp WHERE sal > 3000 ; 
+SELECT ename, job, sal FROM scott_emp WHERE sal > 3000; 
 
+--> 
 SELECT ename, job, sal FROM scott_emp 
 WHERE sal > (SELECT sal FROM scott_emp  WHERE ename='scott');
 
 
 -- 사번이 7521의 업무와 같고, 급여가 7934보다 많은 직원의 사번, 이름, 업무, 급여조회
 /*세번의 조회를 해야함*/
-SELECT sal FROM scott_emp WHERE empno='7934'
-SELECT job FROM scott_emp WHERE empno='7521' 
+SELECT sal FROM scott_emp WHERE empno='7934';
+SELECT job FROM scott_emp WHERE empno='7521';
 SELECT ename, job, sal FROM scott_emp WHERE job='salesman' AND sal > 1300;
 
+--> 
 SELECT ename, job, sal FROM scott_emp 
 WHERE job = (SELECT job FROM scott_emp WHERE empno='7521') 
-AND sal > (SELECT sal FROM scott_emp WHERE empno='7934') ;
+AND sal > (SELECT sal FROM scott_emp WHERE empno='7934');
 
 -- 업무별로 최소급여를 받는 직원의 사번, 이름, 부서코드를 조회
 SELECT DISTINCT job FROM scott_emp;
@@ -84,23 +85,18 @@ SELECT min(sal) FROM scott_emp WHERE job='MANAGER';
 SELECT min(sal) FROM scott_emp WHERE job='ANALYST';
 SELECT min(sal) FROM scott_emp WHERE job='PRESIDENT';
 
--- 1)
 SELECT job, min(sal) FROM scott_emp 
 GROUP BY job;
-
--- 2)
-SELECT empno, ename, deptno FROM scott_emp 
-WHERE sal=800 OR sal=3000 OR sal=2450 OR sal=5000 OR sal=1250;
 
 SELECT empno, ename, deptno FROM scott_emp 
 WHERE sal IN (800, 3000, 2450, 5000, 1250);
 
--- 1) + 2)
+-->
 SELECT empno, ename, deptno FROM scott_emp 
 WHERE sal IN (SELECT min(sal) FROM scott_emp GROUP BY job);
 
 -- note: FROM 절에서 SubQuery 사용 시, 테이블 이름이 사라진 경우 별명 꼭 붙이기
-SELECT * FROM(SELECT * FROM scott_emp WHERE deptno=30 ) as t;
+SELECT * FROM (SELECT * FROM scott_emp WHERE deptno=30 ) as t;
 ```
 <br>
 
@@ -108,14 +104,14 @@ SELECT * FROM(SELECT * FROM scott_emp WHERE deptno=30 ) as t;
 ```sql
 -- 업무별로 최소급여보다 많이 받는 직원의 사번, 이름, 부서코드를 조회
 SELECT empno, ename, deptno, sal FROM scott_emp
-WHERE sal>800 OR sal>3000 OR sal>2450 OR sal>5000 OR sal>1250;
+WHERE sal > 800 OR sal > 3000 OR sal > 2450 OR sal > 5000 OR sal > 1250;
 
 SELECT empno, ename, deptno, sal FROM scott_emp
-WHERE sal>800;
+WHERE sal > 800;
 
 -- 합치면
 SELECT empno, ename, deptno ,sal, job FROM scott_emp
-WHERE sal> ANY(SELECT min(sal) FROM scott_emp GROUP BY job);
+WHERE sal > ANY(SELECT min(sal) FROM scott_emp GROUP BY job);
 ```
 <br>
 
@@ -123,10 +119,10 @@ WHERE sal> ANY(SELECT min(sal) FROM scott_emp GROUP BY job);
 
 ```sql
 SELECT empno, ename, deptno, sal FROM scott_emp
-WHERE sal>=3000 AND sal>=1300 AND sal>=2975 AND sal>=5000 AND sal>=1600;
+WHERE sal >= 3000 AND sal >= 1300 AND sal >= 2975 AND sal >= 5000 AND sal >= 1600;
 
 SELECT empno, ename, deptno ,sal, job FROM scott_emp
-WHERE sal>= ALL(SELECT max(sal) FROM scott_emp GROUP BY job);
+WHERE sal >= ALL(SELECT max(sal) FROM scott_emp GROUP BY job);
 ```
 <br>
 
