--- a/_posts/2019-03-29-SQL(3).md
+++ b/_posts/2019-03-29-SQL(3).md
@@ -356,6 +356,7 @@ INSERT INTO tableEXAM(name) VALUES('kimmy'); -- ERROR
 ```sql
 -- PRIMARY KEY 지정 방법
 DROP TABLE tableEXAM;
+
 --하나의 field에만 primary key
 CREATE TABLE tableEXAM(
 	id	int	PRIMARY KEY, 
@@ -363,6 +364,7 @@ CREATE TABLE tableEXAM(
 );
 
 DROP TABLE tableEXAM;
+
 -- 여러 field를 하나의 primary key로 가능 (권장)
 CREATE TABLE tableEXAM( 
 	id	int, 
@@ -419,6 +421,7 @@ NN: DEFAULT
 ND: AUTO_INCREMENT
 */
 DROP TABLE tableEXAM;
+
 CREATE TABLE tableEXAM( 
 	id	int	AUTO_INCREMENT, 
 	name varchar(10) DEFAULT 'no name', 
@@ -473,7 +476,7 @@ DROP TABLE tableDEPT;
 ```
 <br>
 
-### example
+### Example
 
 | column name  	| post1 	| post2 	| addr                        	|
 |------------   |---------  |--------   |----------------------------   |
