--- a/_posts/2019-04-01-SQL(4).md
+++ b/_posts/2019-04-01-SQL(4).md
@@ -86,10 +86,6 @@ DESC scott_emp;
 <br>
 
 ```sql
--- 제약을 통해 생성
-CREATE INDEX indexname ON tablename(fieldname)
-```
-```sql
 CREATE TABLE tableINDEX(
     id  int,
     name varchar(10),
@@ -102,11 +98,33 @@ INSERT INTO tableINDEX values(7, 'john', 4.2);
 INSERT INTO tableINDEX values(1, 'tom', 7.9);
 
 SELECT * from tableINDEX;
-
+```
+```
++------+-------+-------+
+| id   | name  | point |
++------+-------+-------+
+|    5 | scott |   2.3 |
+|    2 | adam  |   6.4 |
+|    7 | john  |   4.2 |
+|    1 | tom   |   7.9 |
++------+-------+-------+
+```
+```sql
+-- 제약을 통해 생성
 CREATE INDEX idx_point ON tableINDEX(point);
 
 SELECT * FROM tableINDEX WHERE point >= 4;
-
+```
+```
++------+------+-------+
+| id   | name | point |
++------+------+-------+
+|    2 | adam |   6.4 |
+|    7 | john |   4.2 |
+|    1 | tom  |   7.9 |
++------+------+-------+
+```
+```sql
 -- alot faster after making index
 EXPLAIN SELECT * FROM tableINDEX WHERE point >= 4;
 ```
