--- a/_posts/2019-04-15-Django(1).md
+++ b/_posts/2019-04-15-Django(1).md
@@ -9,8 +9,7 @@ comments: true
 share: true
 ---
 
-## Django application 작성 예제 (myapp)
-App 이란? 실제 client와 web-server 사이에 정보를 주고 받기 위한 웹 응용 프로그램
+## Django application 생성 예제 (myapp)
 <br>
 
 #### 0. project 생성 
@@ -42,10 +41,11 @@ INSTALLED_APPS = [
 ```
 #### 2. client의 요청 처리
 ```python
-# myproj1 -> myapp -> views.py
+# myapp -> views.py
 from django.http.response import HttpResponse
 
-def index()     # 사용자가 접속 시 (요청 시) 함수 호출됨
+def index(request):     # 사용자가 접속 시 (요청 시) 함수 호출됨
+    return HttpResponse("인덱스 요청 처리. 여기는 메인 페이지")
     
 ```
 
@@ -65,115 +65,51 @@ urlpatterns = [
 ```
 
 #### 4. myapp urls.py
+접속 시, 메인 urls에서 myapp.urls에 있을(?) path로 toss했기 때문에 앱 하단에 urls.py를 생성
 ```python
 # myapp -> urls.py 생성
 from django.urls import path
 from myapp import views
 
-path('', views.index, name='index'), # 사용자 접속 시 views.index를 실행해라
+path('', views.index), # http://127.0.0.1:8000/ 접속 시 (2단계에서 만든) views.index를 실행해라
 ```
 
 #### 5. templates
+templates 폴더는 장고 default명 임. 마음대로 바꾸면 노노
+```html
+<!-- myapp -> templates 폴더 생성 -> hello.html 작성 -->
+<!-- 앞으로는 body 안 내용만 명시할거임. -->
+<body>
+    <h1> 안녕, {{name}}. Django가 지원하는 변수 태그 사용함! </h1>
+</body>
+```
 ```python
-# myapp -> templates 폴더 생성 (장고 default명 임)
-#    hello.html 작성
-
 # myapp -> views.py
-def hello_template(request):
+# 이 함수를 실행 시, hello.html이 실행됨 + name 이라는 변수도 html에 같이 넘겨줌
+def hello_template(request):    
     name = '은지'
     return render(request, 'hello.html', {'name':name})
 
 # myapp -> urls.py
-path('hello_tem', views.hello_template)     #hello_tem 접속 시 views.hello_template를 실행해라
+path('hello_tem', views.hello_template)     #http://127.0.0.1:8000/hello_tem 접속 시 views.hello_template를 실행해라
 ```
 
 #### 6. image 출력
+```
+# myapp -> static images 폴더 생성 -> 이미지 추가
+```
+```html
+<!-- myapp -> templates -> image.html 작성 -->
+<h1> image 출력 </h1>
+<img src ="/static/images/Koala.jpg" style="width:300px; height:300px">
+```
+
 ```python
-# myapp -> static images 폴더 생성 & 이미지 추가
-
-# myapp -> templates
-#    my.html 작성
-
 # myapp -> views.py
-    def hello_images
+def hello_images(request):
+    return render(request, 'image.html')
 
 # myapp -> urls.py
-    path('img', views.hello_images)
+path('img', views.hello_images),
 ```
 <br>
-
-## 요청방식
-1. get
- - 하이퍼링크 요청 방식, url 요청 방식
- - 기본 요청 방식
- - 간단한 데이터만 전송 (패킷의 header 부분에 데이터를 담아 전송)
- - 데이터 노출 (주소에 그대로)
- - 조회 요청시 사용
-    
-2. post
- - 폼 전송(=요청) 방식
- - 많은 양의 데이터 전송 (패킷의 body 부분에 데이터를 따로 보관해 전송)
- - 데이터 전송 시 노출되지 않음
- - 데이터 변경이나 등록 요청시
-<br>
-
-### get 방식 실습 (getapp)
-```
-(base) C:\njikim\Django\myproj1>python manage.py startapp getapp
-```
-```python
-# myproj1 -> settings.py INSTALLED_APPS에 getapp 추가
-
-# getapp -> templates 폴더 생성
-
-# myproj1 -> urls.py
-path('getapp/')
-
-# getapp -> views.py
-mainFunc()
-
-# getapp -> templates -> index.html 작성
-# 데이터 전송 by href="callget?name=eunjikim&age=20" & using form tag
-
-# myproj1 -> urls.py
-from getapp import views
-path('getapp/', views.mainFunc)     # 메인 url에서 바로 처리 
-```
-
-note: 
-- 그전에는 include로 접속 경로를 지정. 지금은 views에 있는 함수 바로 불러옴
-- 메인에서 views로 직접 처리하는 건 하나만 할 수 있음
-- http://127.0.0.1:8000/getapp/ 이런식으로 직접 url을 쳐서 요청하는 방식이 바로 get 방식
-- http://127.0.0.1:8000/getapp?age=30    # get 방식으로 데이터도 같이 전송하는 예시
-  
-<br>
-
-#### callget.html
-getapp에서 href 클릭 했을 때 이동할 html
-
-```python
-# getapp -> views.py
-from django.views.generic.base import TemplateView
-class callView(TemplateView):   # TemplateView라는 django의 내장 class를 상속 받음
-
-# myproj1 -> urls.py
-from getapp.views import CallView
-path('getapp/callget/', CallView.as_view())
-```
-<br>
-
-#### insert.html 
-callget.html에서 href 클릭 했을 때 이동할 html 
-```python
-# myproj1 -> urls.py
-path('getapp/', include('getapp.urls'))
-    
-# getapp -> views.py    
-def insertFunc()
-
-# getapp -> urls.py 생성
-from django.urls import path
-from getapp import views
-
-path('insert', views.insertFunc) 
-```
