--- a/_posts/2019-04-15-Django(2).md
+++ b/_posts/2019-04-15-Django(2).md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Django (2)"
-description: ""
+description: "call/get 요청 방식"
 date: 2019-04-15
 tags: []
 category: Django
@@ -24,13 +24,16 @@ share: true
  - 데이터 변경이나 등록 요청시
 <br>
 
-### get 방식 실습 (getapp)
+## call/get 방식 실습 순서: getapp
+
+#### 앱 생성 및 메인 화면 url 정리
+1. app 생성
 ```
 (base) C:\njikim\Django\myproj1>python manage.py startapp getapp
-```
-```python
 # myproj1 -> settings.py INSTALLED_APPS에 getapp 추가
+```
 
+```python
 # getapp -> templates 폴더 생성
 
 # myproj1 -> urls.py
