--- a/_posts/2019-04-15-Django(2).md
+++ b/_posts/2019-04-15-Django(2).md
@@ -26,64 +26,122 @@ share: true
 
 ## call/get 방식 실습 순서: getapp
 
-#### 앱 생성 및 메인 화면 url 정리
+#### 앱 생성 및 메인 화면 url 지정
+
 1. app 생성
 ```
 (base) C:\njikim\Django\myproj1>python manage.py startapp getapp
 # myproj1 -> settings.py INSTALLED_APPS에 getapp 추가
 ```
-
+2. getapp -> views.py
 ```python
-# getapp -> templates 폴더 생성
-
-# myproj1 -> urls.py
-path('getapp/')
-
-# getapp -> views.py
-mainFunc()
-
-# getapp -> templates -> index.html 작성
-# 데이터 전송 by href="callget?name=eunjikim&age=20" & using form tag
-
-# myproj1 -> urls.py
-from getapp import views
-path('getapp/', views.mainFunc)     # 메인 url에서 바로 처리 
+def mainFunc(request):
+    return render(request, 'index.html')
 ```
 
-note: 
-- 그전에는 include로 접속 경로를 지정. 지금은 views에 있는 함수 바로 불러옴
+3. getapp -> templates 생성 -> index.html 작성
+```html
+<!-- 데이터전송 -->
+<h1> GET/POST 연습 </h1> <br>
+<a href="callget?name=eunjikim&age=20"> callget 파일 호출 </a> <br>
+```
+
+4. myproj1 -> urls.py
+```python
+from getapp import views
+path('getapp/', views.mainFunc),     # 메인 url에서 바로 views에 있는 함수 불러와서 처리    
+```
+**note:** 
+- 그전에는 include로 접속 경로를 toss. But, 지금은 views에 있는 함수 바로 불러옴
 - 메인에서 views로 직접 처리하는 건 하나만 할 수 있음
 - http://127.0.0.1:8000/getapp/ 이런식으로 직접 url을 쳐서 요청하는 방식이 바로 get 방식
 - http://127.0.0.1:8000/getapp?age=30    # get 방식으로 데이터도 같이 전송하는 예시
-  
-<br>
 
-#### callget.html
-getapp에서 href 클릭 했을 때 이동할 html
+<Br>
 
+## callget.html: getapp에서 href 클릭 했을 때 이동할 html 
+
+5. getapp -> views.py
 ```python
-# getapp -> views.py
 from django.views.generic.base import TemplateView
-class callView(TemplateView):   # TemplateView라는 django의 내장 class를 상속 받음
 
-# myproj1 -> urls.py
+class CallView(TemplateView):   #django의 내장 클래스를 상속 받음
+    template_name = "callget.html" # template_name는 장고 default 변수
+```
+
+6. myproj1 -> urls.py
+```python
 from getapp.views import CallView
 path('getapp/callget/', CallView.as_view())
 ```
-<br>
 
-#### insert.html 
-callget.html에서 href 클릭 했을 때 이동할 html 
+## insert.html: callget.html에서 href 클릭 했을 때 이동할 html 
+7. myproj1 -> urls.py
+```python    
+path('getapp/', include('getapp.urls')),
+```
+
+8. getapp -> views.py  
 ```python
-# myproj1 -> urls.py
-path('getapp/', include('getapp.urls'))
-    
-# getapp -> views.py    
-def insertFunc()
+def insertFunc(request):
+    print('요청 방식:' + request.method)
+```
 
-# getapp -> urls.py 생성
+9. getapp -> urls.py 생성
+```python
 from django.urls import path
 from getapp import views
 
-path('insert', views.insertFunc) 
+path('insert', views.insertFunc),**
 ```
+
+10. getapp -> templates -> insert.html
+```html
+<!-- note: post 방식은 반드시 form으로 묶어서 -->      
+<h1> get 요청처리 page </h1> <br>
+<form action="insert" method="post">
+    이름: <input type="text" name="name">
+    <input type="submit" value="확인">
+</form>    
+```
+
+11. myproj1 -> settings.py
+```python
+# post 요청처리로 데이터를 받을 때 csrf 처리해주기
+MIDDLEWARE = [
+    #'django.middleware.csrf.CsrfViewMiddleware', 주석처리
+]  
+```
+
+12. getapp -> views.py
+```python
+# get 방식일 때 insert.html 호출, post 방식일 때 list.html 호출 
+def insertFunc(request):
+    if request.method == 'GET':
+        print('get 요청 처리')
+        return render (request, "insert.html")
+    else:
+        return render(request, "list.html")
+```
+<br>
+
+## list.html: post 요청 처리 페이지 
+13. getapp -> views.py
+```python
+# list.html 호출 시 name 변수도 같이 넘겨주기 
+def insertFunc(request):
+    if request.method == 'GET':
+        print('get 요청 처리')
+        return render (request, "insert.html")
+    else:
+        name = request.POST.get("name")
+        return render(request, "list.html", {"name": name})
+```
+
+14.  getapp -> templates -> list.html 작성
+```html
+<h1> post 요청 처리 page </h1> <br>
+    결과: {{name}}
+```
+
+
