--- a/_posts/2019-04-15-Django(1).md
+++ b/_posts/2019-04-15-Django(1).md
@@ -46,7 +46,6 @@ from django.http.response import HttpResponse
 
 def index(request):     # 사용자가 접속 시 (요청 시) 함수 호출됨
     return HttpResponse("인덱스 요청 처리. 여기는 메인 페이지")
-    
 ```
 
 #### 3. 메인 urls.py
@@ -78,11 +77,12 @@ path('', views.index), # http://127.0.0.1:8000/ 접속 시 (2단계에서 만든
 templates 폴더는 장고 default명 임. 마음대로 바꾸면 노노
 ```html
 <!-- myapp -> templates 폴더 생성 -> hello.html 작성 -->
-<!-- 앞으로는 body 안 내용만 명시할거임. -->
+<!-- 앞으로는 body 안 내용만 명시할거임 -->
 <body>
     <h1> 안녕, {{name}}. Django가 지원하는 변수 태그 사용함! </h1>
 </body>
 ```
+
 ```python
 # myapp -> views.py
 # 이 함수를 실행 시, hello.html이 실행됨 + name 이라는 변수도 html에 같이 넘겨줌
