--- a/_posts/2019-04-15-Django(2).md
+++ b/_posts/2019-04-15-Django(2).md
@@ -138,7 +138,7 @@ def insertFunc(request):
 ```
 <br>
 
-## list.html: post 요청 처리 페이지 
+#### list.html 생성: post 요청 처리 페이지 
 - getapp -> views.py
 
 ```python
@@ -156,7 +156,7 @@ def insertFunc(request):
 
 ```html
 <h1> post 요청 처리 page </h1> <br>
-    결과: {{ name }}
+    결과: { { name } }
 ```
 
 <br>
