--- a/_posts/2019-04-16-Django(3).md
+++ b/_posts/2019-04-16-Django(3).md
@@ -20,7 +20,6 @@ def main(request):
 ```
 
 - sessionapp -> templates 폴더 -> main.html 작성
-
 ```html    
 <body>
     <h1> 메인 페이지 </h1>
@@ -29,13 +28,11 @@ def main(request):
  ```
 
 - myproj1 -> urls.py
-
 ```python
 path('sessionapp/', include('sessionapp.urls')),
 ```
 
 - sessionapp -> urls.py 생성
-
 ```python
 from django.urls import path
 from sessionapp import views
@@ -46,16 +43,15 @@ urlpatterns = [
 ```
 
 #### setOS.html 
-- sessionapp -> views.py
 
+- sessionapp -> views.py
 ```python
 def setOS(request):
     return render(request, 'setOS.html')
 ```
 
 - sessionapp -> templates -> setOS.html 작성
-  
-```    
+```html 
 <body>
     <h1> 세션이해하기 </h1>
     <p> 운영체제 선택 </p>
@@ -66,27 +62,24 @@ def setOS(request):
 ```
 
 - sessionapp -> templates -> main.html
-
 ```html
 <!-- setOS path로 갈 수 있게 지정 -->
 <a href="setOS">
 ```
 
 - sessionapp -> urls.py    
-
 ```python
 path("setOS", views.setOS),
 ```
 
 #### showOS.html 
--  sessionapp -> templates -> showOS.html
 
+-  sessionapp -> templates -> showOS.html
 ```html
 <h2> 결과보기 (5초 후에 새로고침하면 os 선택 해제 됨) </h2>
 ```
 
 - sessionapp -> templates -> setOS.html
-  
 ```html
 <a href="showOS">Window</a><br>
 <a href="showOS">Mac os</a><br>
@@ -94,28 +87,25 @@ path("setOS", views.setOS),
 ```
 
 - sessionapp -> urls.py
-
 ```python
     path("showOS", views.showOS),
 ```
 
 - sessionapp -> views.py
-
 ```python
 def showOS(request):
     return render(request, 'showOS.html')
 ```
 
 #### setOS.html 에서 값을 클릭 시, 같이 넘겨 줌
-- sessionapp -> templates -> setOS.html
 
+- sessionapp -> templates -> setOS.html
 ```html
 <a href="showOS?favorite_os=window">Window</a><br>
 <a href="showOS?favorite_os=mac">Mac os</a><br>
 <a href="showOS?favorite_os=linux">Linux</a><br>
 ```
 - sessionapp -> views.py
-
 ```python
 def showOS(request):
     os = request.GET.get("favorite_os")   
@@ -123,14 +113,12 @@ def showOS(request):
 ```
 
 - sessionapp -> templates -> showOS.html
-
 ```html
 <!-- 추가하기 -->
 선택한 OS는 {{os}} 입니다. 
 ```
 
 - sessionapp -> templates -> setOS.html
-
 ```html
 <!-- setOS로 변경하기 -->
 <a href="setOS?favorite_os=window">Window</a><br>
@@ -139,7 +127,6 @@ def showOS(request):
 ```
 
 - sessionapp -> views.py
-
 ```python
 from django.http.response import HttpResponseRedirect
 
