--- a/_posts/2019-04-16-Django(4).md
+++ b/_posts/2019-04-16-Django(4).md
@@ -21,10 +21,14 @@ share: true
 ```
 
 #### http://127.0.0.1:8000/dbapp/show 
-1. myproj1 -> urls.py
-    path('dbapp/', include('dbapp.urls')),
 
-2. dbapp -> urls.py 생성
+- myproj1 -> urls.py
+
+```python
+path('dbapp/', include('dbapp.urls')),
+```
+
+- dbapp -> urls.py 생성
     from django.urls import path
     from dbapp import views
 
@@ -32,27 +36,27 @@ share: true
         path('show', views.mainFunc),
     ]
 
-3. dbapp -> views.py
+- dbapp -> views.py
     from django.shortcuts import render
 
     def mainFunc(request):
         return render(request, 'articlelist.html')
 
-4. dbapp -> models.py 
+- dbapp -> models.py 
 # table 생성
     class Article(models.Model):
 
-7. makemigrations & migrate 
+- makemigrations & migrate 
     (base) C:\njikim\Django\myproj1>python manage.py makemigrations
     (base) C:\njikim\Django\myproj1>python manage.py migrate
 
-8. 슈퍼유저 생성
+- 슈퍼유저 생성
     (base) C:\njikim\Django\myproj1>python manage.py createsuperuser
     Username (leave blank to use 'acorn'): admin
     Email address:
     Password: abcd1234
 
-9. dbapp -> admin.py
+1. dbapp -> admin.py
 # Article class 등록
     from dbapp.models import Article
     admin.site.register(Article)
