--- a/_posts/2019-04-16-Django(4).md
+++ b/_posts/2019-04-16-Django(4).md
@@ -12,7 +12,7 @@ share: true
 ## 내장 db연동 예제: dbapp
 - dbapp 생성, settings.py에 dbapp 추가
 
-- templates -> articlelist.html
+- templates -> articlelist.html 
 ```html
 <body>
     <h2>자료 리스트</h2>
@@ -21,12 +21,12 @@ share: true
 
 #### http://127.0.0.1:8000/dbapp/show 
 
-- myproj1 -> urls.py
+- myproj1 -> urls.py 
 ```python
 path('dbapp/', include('dbapp.urls')),
 ```
 
-- dbapp -> urls.py 생성
+- dbapp -> urls.py 생성 
 ```python
 from django.urls import path
 from dbapp import views
@@ -36,50 +36,64 @@ urlpatterns = [
 ]
 ```
 
-- dbapp -> views.py
+- dbapp -> views.py  
 ```python
 from django.shortcuts import render
 
 def mainFunc(request):
     return render(request, 'articlelist.html')
 ```
-- dbapp -> models.py 
+
+#### table 생성
+
+- dbapp -> models.py     
 ```python
-# table 생성
 class Article(models.Model):
 ```
 
-- makemigrations & migrate 
+- makemigrations & migrate   
 ```
 (base) C:\njikim\Django\myproj1>python manage.py makemigrations
 (base) C:\njikim\Django\myproj1>python manage.py migrate
 ```
-- 슈퍼유저 생성
-    (base) C:\njikim\Django\myproj1>python manage.py createsuperuser
-    Username (leave blank to use 'acorn'): admin
-    Email address:
-    Password: abcd1234
 
-1. dbapp -> admin.py
+- 슈퍼유저 생성 
+```
+(base) C:\njikim\Django\myproj1>python manage.py createsuperuser
+Username (leave blank to use 'acorn'): admin
+Email address:
+Password: abcd1234
+```
+
+- dbapp -> admin.py 
+```python
 # Article class 등록
-    from dbapp.models import Article
-    admin.site.register(Article)
+from dbapp.models import Article
+admin.site.register(Article)
+```
 
-# admin 페이지에 들어가보면 Article 테이블 생성된 것을 확인할 수 있음
-# 레코드 추가해보기
-    admin.site.register(Article)
+- http://127.0.0.1/admin 페이지에 들어가보면 Article 테이블 생성된 것을 확인할 수 있음 <br>
 
+- dbapp -> admin.py  
+```python
 class ArticleAdmin(admin.ModelAdmin):
     list_display = ('id', 'code', 'name', 'price', 'pub_date')
 
 admin.site.register(Article, ArticleAdmin)
+```
 
-10. dbapp -> views.py
+- 이제 admin 페이지에 들어가서 레코드 추가해보기
+
+#### articlelist.html에 db에 있는 자료 보여주기
+- dbapp -> views.py 
+```python
 from dbapp.models import Article
 def mainFunc(request):
     return render(request, 'articlelist.html', {'articles': Article.objects.all()})
+```
 
-11. dbapp -> templates -> articlelist.html
+- dbapp -> templates -> articlelist.html 
+```html
 <body>
     <h2>자료 리스트</h2>
     {% if articles.count > 0 %}
@@ -90,8 +104,10 @@ def mainFunc(request):
         <p>자료가 없네요</p>
     {% endif %}
 </body>
+```
 
-12. dbapp -> templates -> layout.html 추가
+- dbapp -> templates -> layout.html 추가 
+```html
 <body>
     <h2> 자료보기 </h2>
     <div style="color:salmon">
@@ -99,3 +115,4 @@ def mainFunc(request):
     {% endblock %}
     </div>
 </body>
+```
