--- a/_posts/2019-04-16-Django(4).md
+++ b/_posts/2019-04-16-Django(4).md
@@ -12,21 +12,21 @@ share: true
 ## 내장 db연동 예제: dbapp
 - dbapp 생성, settings.py에 dbapp 추가
 
-- templates -> articlelist.html 
+#### 메인페이지 생성
+
+- templates -> articlelist.html  
 ```html
 <body>
     <h2>자료 리스트</h2>
 </body>
 ```
 
-#### http://127.0.0.1:8000/dbapp/show 
-
-- myproj1 -> urls.py 
+- myproj1 -> urls.py     
 ```python
 path('dbapp/', include('dbapp.urls')),
 ```
 
-- dbapp -> urls.py 생성 
+- dbapp -> urls.py 생성  
 ```python
 from django.urls import path
 from dbapp import views
@@ -36,7 +36,7 @@ urlpatterns = [
 ]
 ```
 
-- dbapp -> views.py  
+- dbapp -> views.py   
 ```python
 from django.shortcuts import render
 
@@ -46,18 +46,22 @@ def mainFunc(request):
 
 #### table 생성
 
-- dbapp -> models.py     
+- dbapp -> models.py         
 ```python
 class Article(models.Model):
+    code = models.CharField(max_length=10)
+    name = models.CharField(max_length=20)
+    price = models.IntegerField()
+    pub_date = models.DateTimeField()
 ```
 
-- makemigrations & migrate   
+- makemigrations & migrate      
 ```
 (base) C:\njikim\Django\myproj1>python manage.py makemigrations
 (base) C:\njikim\Django\myproj1>python manage.py migrate
 ```
 
-- 슈퍼유저 생성 
+- 슈퍼유저 생성  
 ```
 (base) C:\njikim\Django\myproj1>python manage.py createsuperuser
 Username (leave blank to use 'acorn'): admin
@@ -65,7 +69,7 @@ Email address:
 Password: abcd1234
 ```
 
-- dbapp -> admin.py 
+- dbapp -> admin.py  
 ```python
 # Article class 등록
 from dbapp.models import Article
@@ -74,7 +78,7 @@ admin.site.register(Article)
 
 - http://127.0.0.1/admin 페이지에 들어가보면 Article 테이블 생성된 것을 확인할 수 있음 <br>
 
-- dbapp -> admin.py  
+- dbapp -> admin.py   
 ```python
 class ArticleAdmin(admin.ModelAdmin):
     list_display = ('id', 'code', 'name', 'price', 'pub_date')
@@ -85,14 +89,15 @@ admin.site.register(Article, ArticleAdmin)
 - 이제 admin 페이지에 들어가서 레코드 추가해보기
 
 #### articlelist.html에 db에 있는 자료 보여주기
-- dbapp -> views.py 
+
+- dbapp -> views.py  
 ```python
 from dbapp.models import Article
 def mainFunc(request):
     return render(request, 'articlelist.html', {'articles': Article.objects.all()})
 ```
 
-- dbapp -> templates -> articlelist.html 
+- dbapp -> templates -> articlelist.html     
 ```html
 <body>
     <h2>자료 리스트</h2>
@@ -106,7 +111,7 @@ def mainFunc(request):
 </body>
 ```
 
-- dbapp -> templates -> layout.html 추가 
+- dbapp -> templates -> layout.html 추가     
 ```html
 <body>
     <h2> 자료보기 </h2>
