--- a/_posts/2019-04-19-Numpy.md
+++ b/_posts/2019-04-19-Numpy.md
@@ -399,3 +399,32 @@ print(np.tile(a, (3,2)))
  [0 1 2 0 1 2]
  [3 4 5 3 4 5]]
 ```
+#### 2차원 그리드 포인트 생성: meshgrid()
+```python
+x = np.arange(3)
+y = np.arange(5)
+
+X, Y = np.meshgrid(x, y)
+print(X)
+print('----------')
+print(Y)
+
+Z = [list(zip(x, y)) for x,y in zip(X, Y)]
+print(Z)
+```
+
+```output
+[[0 1 2]
+ [0 1 2]
+ [0 1 2]
+ [0 1 2]
+ [0 1 2]]
+----------
+[[0 0 0]
+ [1 1 1]
+ [2 2 2]
+ [3 3 3]
+ [4 4 4]]
+
+[[(0, 0), (1, 0), (2, 0)], [(0, 1), (1, 1), (2, 1)], [(0, 2), (1, 2), (2, 2)], [(0, 3), (1, 3), (2, 3)], [(0, 4), (1, 4), (2, 4)]]
+```
