--- a/_posts/2019-04-19-Numpy.md
+++ b/_posts/2019-04-19-Numpy.md
@@ -20,6 +20,7 @@ share: true
 ```python
 import numpy as np
 ```
+<br>
 
 #### 1차원 배열
 ```python
@@ -63,6 +64,7 @@ print(ar.shape)
 3
 (2,3)
 ```
+<br>
 
 #### 3차원배열
 ```python
@@ -86,6 +88,7 @@ print(ar.ndim)
 (2, 3, 4)
 3
 ```
+<br>
 
 #### 배열의 indexing
 ```python
@@ -133,6 +136,7 @@ print(c)
  [ 5  6  7  8]]
 [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20]
 ```
+<br>
 
 #### 배열 슬라이싱
 ```python
@@ -154,6 +158,7 @@ print(a[:,:2])
 [[0 1]
  [4 5]]
 ```
+<br>
 
 #### numpy의 자료형
 - b: boolean
@@ -187,6 +192,7 @@ float64
 float64
 3.0
 ```
+<br>
 
 #### 배열 생성
 ```python 
@@ -246,6 +252,7 @@ print(h)
 
 [  0.  25.  50.  75. 100.]
 ```
+<br>
 
 #### 전치 연산
 ```python
@@ -262,6 +269,7 @@ print(a.T)
  [2 5]
  [3 6]]
 ```
+<br>
 
 #### 배열의 크기 변형
 ```python
@@ -324,6 +332,7 @@ print(a.reshape(12, 1))  # same as a[:, np.newaxis]
  [10]
  [11]]
 ```
+<br>
 
 #### 배열 연결
 ```python
@@ -399,6 +408,8 @@ print(np.tile(a, (3,2)))
  [0 1 2 0 1 2]
  [3 4 5 3 4 5]]
 ```
+<br>
+
 #### 2차원 그리드 포인트 생성: meshgrid()
 ```python
 x = np.arange(3)
@@ -413,7 +424,7 @@ Z = [list(zip(x, y)) for x,y in zip(X, Y)]
 print(Z)
 ```
 
-```output
+```result
 [[0 1 2]
  [0 1 2]
  [0 1 2]
@@ -427,4 +438,218 @@ print(Z)
  [4 4 4]]
 
 [[(0, 0), (1, 0), (2, 0)], [(0, 1), (1, 1), (2, 1)], [(0, 2), (1, 2), (2, 2)], [(0, 3), (1, 3), (2, 3)], [(0, 4), (1, 4), (2, 4)]]
+```
+<br>
+
+#### 브로드 캐스팅
+크기가 서로 다른 행렬(벡터)끼리 연산을 가능하게 하는 것
+
+```python
+x = np.vstack([range(7)[i:i+3] for i in range(5)])
+print(x)
+
+y = np.arange(5)[: , np.newaxis]
+print(y)
+
+print(x+y)
+
+y = np.arange(3)
+print(x+y)
+```
+
+```result
+[[0 1 2]
+ [1 2 3]
+ [2 3 4]
+ [3 4 5]
+ [4 5 6]]
+ 
+[[0]
+ [1]
+ [2]
+ [3]
+ [4]]
+ 
+[[ 0  1  2]
+ [ 2  3  4]
+ [ 4  5  6]
+ [ 6  7  8]
+ [ 8  9 10]]
+ 
+[0 1 2]
+
+[[0 2 4]
+ [1 3 5]
+ [2 4 6]
+ [3 5 7]
+ [4 6 8]]
+```
+<br>
+
+#### 차원축소(dimension reduction) 연산
+- 최대/최소: min, max, argmin, argmax
+- 통계: sum, mean, median, std, var
+- boolean: all, any
+
+```python
+x = np.array([1, 3, 2])
+print(np.argmin(x))          # min값의 index
+print(np.argmax(x))
+
+print(np.all([True, True, False]))
+print(np.any([True, True, False]))
+```
+
+```result
+0
+1
+False
+True
+```
+
+```python
+a = np.array([[1,1],
+              [2,2]])
+print('합계: ', a.sum())
+print('열 합계: ', a.sum(axis=0))
+print('행 합계: ', a.sum(axis=1))
+```
+
+```result
+
+합계:  6
+열 합계:  [3 3]
+행 합계:  [2 4]
+```
+<br>
+
+#### 정렬
+
+```python
+a = np.array([[4, 3, 5, 7],
+             [1, 12, 11, 9],
+             [2, 15, 1, 14]])
+print(np.sort(a))
+print(np.sort(a, axis=1))
+```
+
+```result
+
+[[ 3  4  5  7]
+ [ 1  9 11 12]
+ [ 1  2 14 15]]
+ 
+[[ 3  4  5  7]
+ [ 1  9 11 12]
+ [ 1  2 14 15]]
+```
+<br>
+
+#### 기술통계
+len, mean, var, std, max, min, median, percentile
+
+```python
+x = np.array([18, 5, 10, 23, 19, -8, 10, 0, 0, 5, 2, 15, 8,
+              2, 5, 4, 15, -1, 4, -7, -24, 7, 9, -6, 23, -13])
+print(np.percentile(x, 0))
+print(np.percentile(x, 25))
+print(np.percentile(x, 50))
+print(np.percentile(x, 75))
+print(np.percentile(x, 100))
+
+from scipy.stats import describe
+print(describe(x))
+```
+
+```result
+-24.0
+0.0
+5.0
+10.0
+23.0
+DescribeResult(nobs=26, minmax=(-24, 23), mean=4.8076923076923075, variance=119.84153846153846, skewness=-0.4762339485461929, kurtosis=0.37443381660038977)
+```
+<br>
+
+#### 난수
+rand: 0~1 사이의 균일분표, randn: 가우시안 표준 정규분포(mean=0, std=1), randint: 균일분포의 정수 난수
+
+```python
+print(np.random.rand(10))
+print(np.random.randn(3, 5))
+print(np.random.randint(10))
+print(np.random.randint(11, 20))
+print(np.random.randint(11, 20, size=5))
+print(np.random.randint(10, size=(3,4)))
+```
+
+```result
+[0.02743956 0.51253353 0.76990375 0.90037974 0.63888176 0.47786799
+ 0.90507229 0.38899676 0.44537952 0.12309694]
+[[ 2.18418938 -0.37259681 -0.98805397  0.02471234 -1.05108471]
+ [ 0.18811766  0.31002937  0.92015055  0.45564114 -0.07331703]
+ [ 0.85088686 -0.06887715 -0.99051538 -1.16001217  1.50057094]]
+3
+12
+[13 18 13 14 15]
+[[0 0 0 7]
+ [4 3 8 0]
+ [7 6 8 2]]
+```
+
+```python
+np.random.seed(100)
+print(np.random.rand(5))
+np.random.seed(100)
+print(np.random.rand(5))
+```
+
+```result
+[0.54340494 0.27836939 0.42451759 0.84477613 0.00471886]
+[0.54340494 0.27836939 0.42451759 0.84477613 0.00471886]
+```
+
+```python
+x = np.arange(10)
+np.random.shuffle(x)
+print(x)
+```
+
+```result
+[8 4 3 0 1 6 7 9 5 2]
+```
+
+```python
+# 데이터 샘플링
+print(np.random.choice(5, 5, replace=False))             # 비복원추출
+print(np.random.choice(5, 10))
+print(np.random.choice(5, 10, p=[0.1, 0, 0.3, 0.6, 0]))  #sum of p is 1
+```
+
+```result
+[1 4 0 3 2]
+[1 3 4 4 3 3 3 1 1 3]
+[0 2 3 0 3 3 2 2 0 3]
+```
+<br>
+
+#### 정수형 데이터 카운팅
+```python
+# unique
+a = np.unique([11, 11, 2, 2, 34, 34])
+print(a)
+
+a = np.array(['a', 'b', 'b', 'c', 'a'])
+index, count= np.unique(a, return_counts=True)
+print(index, count)
+
+# bincount
+# !!note! unique: 실행된 값 만 보여줌
+print(np.bincount([1, 1, 2, 2, 2, 3], minlength=6))  #minlength=6 means range(0,6)까지
+```
+
+```result
+[ 2 11 34]
+['a' 'b' 'c'] [2 2 1]
+[0 2 3 1 0 0]
 ```
